# web

./: .dockerignore  .env.ec2.mapping  .env.local  .env.mapping  .gitattributes  .gitignore  .vercelignore  Dockerfile  LICENSE  README.md  create-aliases.sh  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  jest-css-modules-transform-config.js  jest.config.ts  nginx.conf  package-lock.json  package.json  playwright.config.ts  redis_namespaces.md  turbo.json
apps/backend/: .env.mapping  .gitignore  .sql-formatter.json  Cargo.toml  Dockerfile  justfile  package.json  pg_format.conf  sailfish.toml  sqlstates.md
apps/backend/.config/: nextest.toml
apps/backend/.sqlx/: query-0038a1d5b9a99f3061e5cf52932c54595ff6bc9fbbf87fe9aaf2682ad9da211c.json  query-02e4d67c859372c2301deb21634038910008ccf70f306ed05b996c0c4a3f5881.json  query-0447a2a051661bfc49d072d39df2cb960a06835f07f1c0bd8ac335fcdecf6ee9.json  query-04a8691fc966acb4e4fa5d3b7651c5b49a9f936ae4adfe42ba58918ce4e9aa0f.json  query-04e3db4171a88eca94bfbfa11c858eabc11fe493c95bcc2fd1a23fb9346da1bc.json  query-054f9365ee1a26522bd63349c24ed023c717f870813715a1cb842dd5a4f9ec2f.json  query-0784a19a0ae11c15afc2d8e24f5c01f5b0c7c78eaffa9b33bbf3d1dd135d0afd.json  query-08c522c468796781829162a4a938a5775652181e56052ce19a14f8f137626d62.json  query-08cffa7418dd00ddaba83c2984ace4e7adf1c3fb56410a027bc9c67f41cb8997.json  query-093fd5bdf58f0a9e30be5897a05011af7b9880ae1967d9ef4bf4ab2171fd7add.json  query-0ae6d439a0107d86f17aa963788c5ce9a2f6c78eb364f31aa76a0f9b3b90aa77.json  query-0bc93cedcf8b01da5a0543d05a2f11e003b906a5e33e5f9b77f4a9f6648db429.json  query-0dc307616cd9af51b706e02aa339133662b96cc4d555c4d9b789ac62e6a5f91f.json  query-0e590df96faa12dade65a2bde5198012294b2f2316a3932af7234047c2b0dc51.json  query-0fe3ac626b73c0129dddb795115c5e623aa46e0e314393c57f8f78a6250b42f6.json  query-1191d89a686c418c58315c7e31547f7b1364fafa75ab7772cc6899f7fab60aa7.json  query-122c14ef2902370ede607302ff3dd3c4dca351140f8fdc6558fd1cee07b66c1c.json  query-12c7c38a85e5c1be668c0e062894ba22a61ecdfa4271a241b49deaa0662511e4.json  query-1500cfce7157bf314cdc3a260c199b891dbabb17e4cec531708d9eb3c4ec64d9.json  query-162d3b96b69ba4f8a358a4179df865c6e274abe28a69caa057829ae817cde38e.json  query-167437413c95bfc33ed1b7e7b32edb2f038cf0f9821cde6cb5ee14727a1a5fec.json  query-1749bd6819d0a21a0bb55865397851f525ca92a821d6e5562f159ea3672088d1.json  query-176a681a774a247aaa18fe1006ab678c991cfe504afa7b5f46bf05adf9737395.json  query-188d462db4f9508e8ea3dff16cbeb9cd7be75de2a3df2dde43ee7d109e21a8b0.json  query-19371a17f0faa2dc4c73db92e4c2e5ddd8c0d1de79df35039bbbcdf891c09b43.json  query-19a7cf7a64319bf38f1d736c1de084c1a31c485742745c4c629b58622c6e194e.json  query-1a7613ba3e454fab6677eac92a4d218ac8417bb6d795237e4df1ce6e59dd1857.json  query-1b1d45f402493f93f8476a651645e6fd1aa7e8f993cf990ff9411e7acc728b8b.json  query-1b64bbaf614d153b69678d4fd52c1aeea56191d6db4560fc97faa13dd7b4b786.json  query-1dba83f1c4d3e54632763ee104e3843d1ef66fb6233fd28e32eaf749d0b8f0db.json  query-1f05f498e8bce33195c3703b4457677a6cdd06907eac76d50e752ed5a4cbb0e1.json  query-21d158b01ef11ee9a1b275e1fea09494e5ce4a83ee8c54c1c4442ea208e19d94.json  query-22059dc4c9c924cc2d9dfab56d52cc49369c57eb7a807e2923f237a0c949c5ac.json  query-22154626c719d990a56dbd523ba5553dc65984fe8b68013b64953e2b0f14d9ec.json  query-263b8713dcc2f470e599b9dd53884a7adeed0d01c2015d5a4359920fd90dffdc.json  query-27ae6a0e1c426a27f69fad3d2dee166edcb92546b5f04abec4f9f8a11aee3690.json  query-29656b90e9e6017da30bda021d6a6e29f073f53ccaaa1d471a0032f1e0420fb5.json  query-2aa5b3cc05f659671d99a5011a7e1e5f05f6cd759298280b0e267ef2b326e855.json  query-2b1eaf13e0ac03df173c3a5f2fb8012eebbb549225f04bdc262d078fdb4f1d72.json  query-2bed213bff401c58f77710b4130bb35aba832fa294e8487f5e63baecee849ce0.json  (+197 more)
apps/backend/geo/: docker-compose.yaml
apps/backend/lua/: increx.lua
apps/backend/macros/: Cargo.toml
apps/backend/migrations/: 20231004134854_create_citext_extension.up.sql  20231004134904_create_snowflake_generator.down.sql  20231004134904_create_snowflake_generator.up.sql  20231005101928_create_asset_domains.down.sql  20231005101928_create_asset_domains.up.sql  20231005101954_create_int_domains.down.sql  20231005101954_create_int_domains.up.sql  20231005102022_create_markdown_domains.down.sql  20231005102022_create_markdown_domains.up.sql  20231005102055_create_story_category_enum.down.sql  20231005102055_create_story_category_enum.up.sql  20231005102128_create_assets_table.down.sql  20231005102128_create_assets_table.up.sql  20231005102132_create_users_table.down.sql  20231005102132_create_users_table.up.sql  20231005102140_update_assets_table.down.sql  20231005102140_update_assets_table.up.sql  20231005102200_create_tags_table.down.sql  20231005102200_create_tags_table.up.sql  20231005102219_create_stories_table.down.sql  20231005102219_create_stories_table.up.sql  20231005102247_create_story_tags_junction_table.down.sql  20231005102247_create_story_tags_junction_table.up.sql  20231005102300_create_draft_tags_junction_table.down.sql  20231005102300_create_draft_tags_junction_table.up.sql  20231005102315_create_bookmarks_junction_table.down.sql  20231005102315_create_bookmarks_junction_table.up.sql  20231005102339_create_histories_junction_table.down.sql  20231005102339_create_histories_junction_table.up.sql  20231005102404_create_story_likes_junction_table.down.sql  20231005102404_create_story_likes_junction_table.up.sql  20231008124646_create_blocks_junction_table.down.sql  20231008124646_create_blocks_junction_table.up.sql  20231008130429_create_mutes_junction_table.down.sql  20231008130429_create_mutes_junction_table.up.sql  20231008130620_create_relations_junction_table.down.sql  20231008130620_create_relations_junction_table.up.sql  20231008130808_create_friends_junction_table.down.sql  20231008130808_create_friends_junction_table.up.sql  20231008131425_create_account_activities_table.down.sql  (+173 more)
apps/backend/proto/: comment_def.v1.rs  login_activity_def.v1.rs  login_activity_def.v1.serde.rs  (+4 more)
apps/discovery/: .env.mapping  Cargo.toml  Dockerfile  justfile
(+4132 files in other folders)
