[package]
name = "storiny"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["session", "macros"]

[profile.dev]
split-debuginfo = "unpacked"

[dependencies]
storiny_session = { version = "0.1.0", path = "session" }
actix-cors = "0.6.4"
actix-extensible-rate-limit = { version = "0.2.1", features = ["redis"] }
actix-http = "3.6.0"
actix-multipart = "0.6.1"
actix-service = "2.0.2"
actix-utils = "3.0.1"
actix-web = { version = "4.5.1", features = ["cookies", "secure-cookies", "__compress"] }
actix-web-validator = "5.0.1"
anyhow = "1.0.75"
apalis = { version = "0.5.1", default-features = false, features = ["cron", "tokio-comp", "tracing"] }
argon2 = "0.5.2"
async-compression = { version = "0.4.5", features = ["gzip", "tokio"] }
async-recursion = "1.0.5"
async-trait = "0.1.73"
aws-config = "1.5.16"
aws-sdk-s3 = "1.73.0"
aws-sdk-sesv2 = "1.22.0"
chrono = "0.4.31"
colors-transform = "0.2.11"
cookie = { version = "0.18.0", features = ["private", "signed"] }
deadpool-redis = "0.15.0"
derive_more = "0.99.17"
dominant_color = "0.4.0"
dotenv = "0.15.0"
envy = "0.4.2"
futures = "0.3.29"
futures-core = "0.3.28"
futures-util = { version = "0.3.29", features = ["sink"] }
hashbrown = { version = "0.14.0", features = ["serde"] }
image = { version = "0.25.1", default-features = false, features = ["gif", "png", "jpeg", "rayon", "webp"] }
itertools = "0.12.0"
lazy_static = "1.4.0"
lockable = { version = "0.0.8", default-features = false }
lz-str = "0.2.1"
maxminddb = "0.24.0"
mime = "0.3.17"
nanoid = "0.4.0"
oauth2 = { version = "5.0.0-alpha.4", features = ["reqwest"] }
pbjson = "0.6.0"
prost = "0.12.1"
rand = "0.8.5"
redis = { version = "0.25.1", default-features = false, features = ["tokio-comp", "aio", "connection-manager", "script"] }
regex = "1.9.5"
reqwest = { version = "0.12.4", features = ["json"] }
sailfish = "0.8.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
sitemap-rs = "0.2.0"
slugify = "0.1.0"
sqlx = { version = "0.7.2", features = ["postgres", "time", "macros", "json", "migrate", "runtime-tokio", "sqlx-postgres", "uuid", "tls-rustls"] }
strum = { version = "0.26.2", features = ["derive"] }
strum_macros = "0.26.2"
thiserror = "1.0.48"
time = { version = "0.3.29", features = ["formatting", "macros", "serde"] }
tokio = { version = "1.32.0", features = ["macros"] }
tonic = { version = "0.11.0", features = ["gzip", "transport"] }
tonic-health = "0.11.0"
totp-rs = { version = "5.4.0", features = ["qr", "gen_secret", "otpauth"] }
tracing-actix-web = "0.7.9"
url = "2.4.1"
urlencoding = "2.1.3"
user-agent-parser = "0.3.5"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
validator = { version = "0.16.1", features = ["derive"] }
warp = { version = "0.3.6", default-features = false, features = ["async-compression", "websocket", "compression"] }
yrs = "0.18.3"
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rmp-serde = "1.1.2"
tower = "0.4.13"
sentry = { version = "0.32.0", features = ["tracing"] }
http = "1.1.0"
atomic_refcell = "0.1.13"
emojis = "0.6.1"
markdown = "1.0.0-alpha.16"
hex = "0.4.3"
hmac = "0.12.1"
sha1 = "0.10.6"
deadpool-lapin = "0.12.0"
hickory-resolver = { version = "0.24.1", features = ["tokio"] }
four-cc = "0.4.0"
base64 = "0.21.7"
md5 = "0.7.0"

[dev-dependencies]
storiny_macros = { version = "0.1.0", path = "macros" }
reqwest = { version = "0.12.4", default-features = false, features = ["cookies", "json", "multipart", "stream"] }
tempfile = "3.8.1"
tokio = { version = "1.32.0", features = ["time"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
tokio-util = { version = "0.7.9", features = ["codec"] }
tokio-tungstenite = "0.21.0"
bytes = "1.5.0"
xml2json-rs = "1.0.1"
hickory-server = { version = "0.24.1", features = ["tokio-rustls"] }
