[package]
name = "discovery"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.1"
actix-cors = "0.6.4"
actix-governor = "0.4.1"
actix-http = "3.4.0"
actix-web = "4.4.0"
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.10.0"
hashbrown = { version = "0.14.0", features = ["serde"] }
html5ever = "0.26.0"
lazy_static = "1.4.0"
log = "0.4.20"
lz-str = "0.2.1"
markup5ever_rcdom = "0.2.0"
once_cell = "1.18.0"
regex = "1.9.5"
reqwest = { version = "0.11.20", features = ["json"] }
sailfish = "0.8.0"
serde = { version = "1.0.188", features = ["derive"] }
serde-this-or-that = "0.4.2"
serde_json = "1.0.105"
serde_with = "3.3.0"
url = "2.4.1"
visdom = { version = "0.5.10", features = ["insertion", "destory"] }
webpage = "1.6.0"

[dev-dependencies]
just = "1.14.0"
mockito = "1.1.0"
