[package]
name = "storiny_discovery"
version = "0.0.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.4"
actix-extensible-rate-limit = { version = "0.2.1", features = ["redis"] }
actix-files = "0.6.2"
actix-http = "3.4.0"
actix-web = "4.4.0"
async-trait = "0.1.73"
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.10.0"
envy = "0.4.2"
hashbrown = { version = "0.14.0", features = ["serde"] }
hex = "0.4.3"
hmac = "0.12.1"
html5ever = "0.26.0"
lazy_static = "1.4.0"
log = "0.4.20"
lz-str = "0.2.1"
markup5ever_rcdom = "0.2.0"
once_cell = "1.18.0"
redis = { version = "0.23.3", features = ["tokio-comp", "aio", "connection-manager"] }
regex = "1.9.5"
reqwest = { version = "0.11.20", features = ["json"] }
sailfish = "0.8.0"
serde = { version = "1.0.188", features = ["derive"] }
serde-this-or-that = "0.4.2"
serde_json = "1.0.105"
sha1 = "0.10.5"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.48"
tokio = "1.32.0"
url = "2.4.1"
visdom = { version = "1.0.0", features = ["insertion", "destroy"] }

[dev-dependencies]
just = "1.14.0"
mockito = "1.1.0"
